Fix z-index of navigation bar

--- a/sites/all/themes/kay_default/layout.css
+++ b/sites/all/themes/kay_default/layout.css
@@ -73,6 +73,7 @@ body.two-sidebars #sidebar-first {
   position: fixed;
   width: 100%;
   min-height: 5em;
+  z-index: 9;
 }
 
 #navigation a {
